# DSpellCheck

./: CMakeLists.txt
src/: DSpellCheck.mm  StyleCategory.cpp  StyleCategory.h
test/: engine_test.mm
